--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ltp"]
-	path = ltp
+[submodule "src/main/c++/ltp"]
+	path = src/main/c++/ltp
 	url = https://github.com/HIT-SCIR/ltp.git
