--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
       <plugin>
         <groupId>com.github.maven-nar</groupId>
         <artifactId>nar-maven-plugin</artifactId>
-        <version>3.2.4-SNAPSHOT</version>
+        <version>3.3.0</version>
         <extensions>true</extensions>
         <configuration>
           <cpp>
