--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,10 @@ os:
 before_install:
     - sudo apt-get install cmake
     - git submodule update
-    - cd ltp
-    - ./configure
-    - make
-    - cd ..
 
 install:
-    - cmake -DLTP_HOME=`pwd`/ltp/ .
-    - make
-    - ant
-    - export LD_LIBRARY_PATH=LD_LIBRARY_PATH:`pwd`/libs/:`pwd`/ltp/lib
+    - mvn
 
 script:
-    - javac -cp "output/jar/ltp4j.jar" examples/Test.java
-    - cat examples/example | java -cp "output/jar/ltp4j.jar:examples" Test --segment-model=ltp_data/cws.model --postag-model=ltp_data/pos.model --ner-model=ltp_data/ner.model --parser-model=ltp_data/parser.model --srl-dir=ltp_data/srl/
+    - javac -cp "target/*.jar" examples/Test.java
+    - cat examples/example | java -cp "target/*.jar:examples" Test --segment-model=ltp_data/cws.model --postag-model=ltp_data/pos.model --ner-model=ltp_data/ner.model --parser-model=ltp_data/parser.model --srl-dir=ltp_data/srl/
