--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ install:
     - mvn
 
 script:
-    - javac -cp "target/*.jar" examples/Test.java
-    - cat examples/example | java -cp "target/*.jar:examples" Test --segment-model=ltp_data/cws.model --postag-model=ltp_data/pos.model --ner-model=ltp_data/ner.model --parser-model=ltp_data/parser.model --srl-dir=ltp_data/srl/
+    - version=`egrep '<version>' pom.xml | head -1 | tr -d ' ' | sed 's/<version>//g' | sed 's/<\/version>//g'`
+    - javac -cp "target/ltp4j-${version}.jar" examples/Test.java
+    - cat examples/example | java -Djava.library.path=target/nar/ltp4j-$version-amd64-Linux-gpp-jni/lib/amd64-Linux-gpp/jni/ -cp "target/ltp4j-${version}.jar:examples" Test --segment-model=ltp_data/cws.model --postag-model=ltp_data/pos.model --ner-model=ltp_data/ner.model --parser-model=ltp_data/parser.model --srl-dir=ltp_data/srl/
