update test model to 3.3.1, update pom for c++0x, update ltp to 3.3.1, remove ant build, add fix travis osx bug.

--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,9 @@
               <path>src/main/c++/ltp/thirdparty/eigen-3.2.4</path>
             </includePaths>
             <debug>false</debug>
+            <options>
+              <option>-std=c++0x</option>
+            </options>
           </cpp>
           <c>
             <excludes>
