--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,8 @@ install:
   - cmd: SET MAVEN_OPTS=-XX:MaxPermSize=2g -Xmx4g
   - cmd: SET JAVA_OPTS=-XX:MaxPermSize=2g -Xmx4g
 build_script:
+  - git submodule init
+  - git submodule update
   - mvn clean package --batch-mode -DskipTest
 test_script:
   - mvn clean install --batch-mode
