--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,9 @@
 version: '{build}'
-os: Windows Server 2012
+
+os:
+  - Visual Studio 2013
+  - Visual Studio 2015
+
 install:
   - ps: |
       Add-Type -AssemblyName System.IO.Compression.FileSystem
@@ -13,12 +17,15 @@ install:
   - cmd: SET PATH=C:\maven\apache-maven-3.3.9\bin;%JAVA_HOME%\bin;%PATH%
   - cmd: SET MAVEN_OPTS=-XX:MaxPermSize=2g -Xmx4g
   - cmd: SET JAVA_OPTS=-XX:MaxPermSize=2g -Xmx4g
+
 build_script:
   - git submodule init
   - git submodule update
   - mvn clean package --batch-mode -DskipTest
+
 test_script:
   - mvn clean install --batch-mode
+
 cache:
   - C:\maven\
   - C:\Users\appveyor\.m2
