--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,10 @@ os:
   - Visual Studio 2013
   - Visual Studio 2015
 
+platform: 
+  - x86
+  - x64
+
 install:
   - ps: |
       Add-Type -AssemblyName System.IO.Compression.FileSystem
