--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,8 @@
 version: '{build}'
 
-os:
-  - Visual Studio 2013
-  - Visual Studio 2015
+os: Visual Studio 2013
 
-platform: 
-  - x86
-  - x64
+platform: x64
 
 install:
   - ps: |
@@ -25,10 +21,7 @@ install:
 build_script:
   - git submodule init
   - git submodule update
-  - mvn clean package --batch-mode -DskipTest
-
-test_script:
-  - mvn clean install --batch-mode
+  - mvn -v
 
 cache:
   - C:\maven\
