--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ os:
     - osx
 
 before_script:
-    - if [[ -z "$JAVA_HOME" && -x "/usr/libexec/java_home" ]] ; then export JAVA_HOME=$(/usr/libexec/java_home) fi
+    - if [[ -z "$JAVA_HOME" && -x "/usr/libexec/java_home" ]] ; then export JAVA_HOME=$(/usr/libexec/java_home); fi
     - git submodule init
     - git submodule update
 
