--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ ltp_data
 # outputs #
 ###########
 output
+CMakeFiles
+cmake_install.cmake
+CmakeCache.txt
+Makefile
+libs
 
 ###########
 # IDEs    #
