--- a/aol.properties
+++ b/aol.properties
@@ -1,3 +1,3 @@
-x86.Windows.msvc.cpp.defines=Windows WIN32 _WINDOWS
-x86.Windows.msvc.c.defines=Windows WIN32 _WINDOWS
+amd64.Windows.msvc.cpp.defines=Windows WIN32 _WINDOWS
+amd64.Windows.msvc.c.defines=Windows WIN32 _WINDOWS
 
