--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,7 @@
               <option>-std=c++0x</option>
               <option>-w</option>
               <option>-DNOMINMAX</option>
+              <option>-DBOOST_ALL_NO_LIB</option>
               <!--<option>-Wall</option>
               <option>-Wno-sign-conversion</option>
               <option>-Wno-unused-variable</option>
