--- a/aol.properties
+++ b/aol.properties
@@ -1,3 +1,3 @@
-amd64.Windows.msvc.cpp.defines=Windows WIN32 _WINDOWS
-amd64.Windows.msvc.c.defines=Windows WIN32 _WINDOWS
+amd64.Windows.msvc.cpp.defines=Windows WIN32 _WINDOWS NOMINMAX BOOST_ALL_NO_LIB
+amd64.Windows.msvc.c.defines=Windows WIN32 _WINDOWS NOMINMAX BOOST_ALL_NO_LIB
 
